# legacy2345

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
legacy/: Makefile.am
legacy/character/: Makefile.am  basiccharacterbuilder.cpp  basiccharacterbuilder.h  character.cpp  character.h  characterbuilder.cpp  characterbuilder.h  characterconfig.h  nameconfig.cpp  nameconfig.h  namegenerator.cpp  namegenerator.h  sexuality.cpp  sexuality.h  sexualityconfig.h  statisticalnamegenerator.cpp  statisticalnamegenerator.h
legacy/character/tests/: Makefile.am  test_character.cpp  test_name_generator.cpp  test_sexuality.cpp
legacy/core/: Makefile.am  argparse.cpp  argparse.h  config.cpp  config.h  config_file.cpp  config_file.h  config_paths.cpp  config_paths.h  filesystem.cpp  filesystem.h  logger.cpp  logger.h  posix_filesystem.cpp  posix_filesystem.h  random.cpp  random.h
legacy/core/tests/: Makefile.am  mock_filesystem.cpp  mock_filesystem.h  test_argparse.cpp  test_config.cpp  test_config_paths.cpp  test_core.cpp  test_filesystem.cpp  test_logger.cpp  test_random.cpp
legacy/tests/: Makefile.am
legacy/tests/character/: Makefile.am  test_character.cpp  test_name_generator.cpp  test_sexuality.cpp
legacy/tests/core/: Makefile.am
legacy/tests/world/: Makefile.am  fake_mapbuilder.h  test_cell.cpp  test_layer.cpp  test_map.cpp  test_map_save_and_load.cpp
legacy/world/: Makefile.am  cell.h  cellcache.h  layer.h  map.cpp  map.h  mapbuildersimple.cpp  mapbuildersimple.h  mapbuilderstatic.cpp  mapbuilderstatic.h  mapbuilderstream.cpp  mapbuilderstream.h  maplayer.cpp  maplayer.h
legacy/world/tests/: Makefile.am  test_cell.cpp  test_cellcache.cpp  test_map.cpp  test_map_save_and_load.cpp  test_maplayer.cpp  test_world.cpp
tools/: Makefile.am
tools/character/: Makefile.am  test_character_namegen.cpp  test_character_sexuality.cpp
tools/core/: Makefile.am  find_data_file.cpp
tools/world/: Makefile.am  dump_map.cpp
